--- a/nexus/vagrantfile
+++ b/nexus/vagrantfile
@@ -9,12 +9,10 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   # Provision
   config.vm.provision :shell, :path => "install_nexus.sh"
 
-  # Pour accéder à la VM depuis l'hote
-  config.vm.network :forwarded_port, guest: 8081, host: 8081
-
+  # Adresse IP
   config.vm.network "public_network", ip: "192.168.1.44"
 
   # Shared folder
-  config.vm.synced_folder "project/", "/home/project", create: true
+  config.vm.synced_folder "shared/", "/home/shared", create: true
 
 end
